[gd_scene load_steps=7 format=3 uid="uid://cyj7a7ob202jq"]

[ext_resource type="Texture2D" uid="uid://2jtf7lng10tq" path="res://assets/textures/UI/UI Building Blocks.png" id="1_ewjwq"]
[ext_resource type="Script" uid="uid://c8sn13x5ast1q" path="res://scenes/tiles/item_button_3.gd" id="1_ilx0p"]
[ext_resource type="Texture2D" uid="uid://xh72hx23lud1" path="res://assets/textures/plants/thing_planted.png" id="2_ilx0p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_emphv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tqov1"]
texture = ExtResource("1_ewjwq")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
region_rect = Rect2(47, 47, 18, 18)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6rjj8"]
texture = ExtResource("1_ewjwq")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
region_rect = Rect2(15, 47, 18, 18)

[node name="itemButton" type="AspectRatioContainer"]
custom_minimum_size = Vector2(17, 17)
offset_right = 17.0
offset_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ilx0p")

[node name="button" type="Button" parent="."]
custom_minimum_size = Vector2(17, 17)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_emphv")
theme_override_styles/hover = SubResource("StyleBoxTexture_tqov1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tqov1")
theme_override_styles/normal = SubResource("StyleBoxTexture_6rjj8")
toggle_mode = true

[node name="itemTexture" type="TextureRect" parent="button"]
clip_contents = true
layout_mode = 2
offset_right = 17.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ilx0p")
stretch_mode = 5

[node name="itemPrice" type="Label" parent="button"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -13.0
offset_right = 7.0
offset_bottom = 8.0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.441515, 0.91299, 0, 1)
theme_override_font_sizes/font_size = 19
text = "0"
vertical_alignment = 2

[node name="itemCount" type="Label" parent="button"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -13.0
offset_right = 1.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 19
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="toggled" from="button" to="." method="_on_button_toggled"]
